--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">Klientutveckling-Projekt</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="upgradesTitle">UPGRADES</string>
+    <string name="MetersDigged">Meters digged: %.2f</string>
+    <string name="current_multiplier">Current Mult</string>
+    <string name="current_multiplier_VALUE">x1.0</string>
 </resources>
