fixade buggar med nav till settings, ändrade textfel på spelytan, nu finns det passiv inkomst, OBSpassiv inkomst är buggad då det skapas för många timers när den startar, behöver mer arbete

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="MetersDigged">Meters digged: %.2f</string>
     <string name="current_multiplier">Current Mult</string>
     <string name="current_multiplier_VALUE">x1.0</string>
+    <string name="settings_title">SETTINGS</string>
+    <string name="meters_per_second">Meters per second: %.2f</string>
 </resources>
