Har lagt till KDoc på clickdatastorage och clickrepository

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="current_multiplier_VALUE">x1.0</string>
     <string name="settings_title">SETTINGS</string>
     <string name="meters_per_second">Meters per second: %.2f</string>
+    <string name="skapa_konto">Skapa Konto</string>
+    <string name="leaderboard_title">LEADERBOARD</string>
 </resources>
