--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,12 @@
 <resources>
     <string name="app_name">Klientutveckling-Projekt</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="upgradesTitle">UPGRADES</string>
-    <string name="MetersDigged">Meters digged: %.2f</string>
-    <string name="current_multiplier">Current Mult</string>
+    <string name="meters_digged_format">Total Meters: %.2f</string>
+    <string name="meters_per_second_format">Meters / Second: %.2f</string>
+    <string name="current_multiplier">Multiplier</string>
     <string name="current_multiplier_VALUE">x1.0</string>
+    <string name="current_meters">Meters</string>
+    <string name="current_meters_VALUE">0.00 m</string>
     <string name="settings_title">SETTINGS</string>
-    <string name="meters_per_second">Meters per second: %.2f</string>
 </resources>
