--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,8 @@
     <string name="create_account">Create account</string>
     <string name="leaderboard_title">LEADERBOARD</string>
     <string name="buy">Buy</string>
+    <string name="Clicker_text">Clicker</string>
+    <string name="Upgrades_text">Upgrades</string>
+    <string name="Leaderboard_text">Leaderboard</string>
+    <string name="Settings_text">Settings</string>
 </resources>
